# rigolwfm-dho800

./: CHANGELOG.rst  CITATION.cff  LICENSE.txt  README.rst  pyproject.toml  release.txt  setup.py  version_base.json
.github/workflows/: publish-to-pypi.yml  test.yaml
RigolWFM/: __init__.py  _version.py  wfmconvert.py
docs/: 0-Basics.ipynb  1-DS1000B-Waveforms.ipynb  1-DS1000C-Waveforms.ipynb  1-DS1000E-Waveforms.ipynb  1-DS1000Z-Waveforms.ipynb  1-DS1102D-Waveforms.ipynb  1-DS2000-Waveforms.ipynb  1-DS4000-Waveforms.ipynb  conf.py  requirements.txt
